--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,8 @@
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
   --brown-color: #46364a;
-  --white-color: #ffffff;
+  --white-color: #555555;
+  --gray2-color: #555555;
 }
 
 * {
