--- a/components/Navbar/Navbar.scss
+++ b/components/Navbar/Navbar.scss
@@ -49,7 +49,7 @@
         }
 
         a{
-            color: var(--gray-color);
+            color: var(--black-color);
             text-decoration: none;
             flex-direction: column;
             text-transform: uppercase;
