--- a/app/App.scss
+++ b/app/App.scss
@@ -4,7 +4,7 @@
   }
   
   .app__whitebg {
-    background-color: var(--white-color);
+    background-color: #242424
   }
   
   .app__primarybg {
@@ -94,7 +94,7 @@
   .p-text {
     font-size: 0.8rem;
     text-align: left;
-    color: var(--gray-color);
+    color: var(--black-color);
     line-height: 1.5;
   
     @media screen and (min-width: 2000px) {
@@ -131,7 +131,7 @@
       border-radius: 50%;
       background-color: var(--white-color);
       margin: 0.23rem 0;
-      border: 1px solid var(--lightGray-color);
+      border: 1px solid var(--black-color);
   
       display: flex;
       justify-content: center;
