--- a/container/Footer/Footer.scss
+++ b/container/Footer/Footer.scss
@@ -25,7 +25,7 @@
       padding: 1rem;
       border-radius: 10px;
       cursor: pointer;
-      background-color: #fef4f5;
+      background-color: #555555;
   
       transition: all 0.3s ease-in-out;
   
@@ -58,11 +58,11 @@
   }
   
   .app__footer-cards .app__footer-card:last-child {
-    background-color: #f2f7fb;
+    background-color: #555555;
   }
   
   .app__footer-cards .app__footer-card:last-child:hover {
-    box-shadow: 0 0 25px #f2f7fb;
+    box-shadow: 0 0 25px #555555;
   }
   
   .app__footer-form {
@@ -90,7 +90,7 @@
         background-color: var(--white-color);
   
         font-family: var(--font-base);
-        color: var(--secondary-color);
+        color: var(--black-color);
         outline: none;
       }
   
@@ -110,7 +110,7 @@
       background-color: var(--secondary-color);
   
       font-weight: 500;
-      color: var(--white-color);
+      color: var(--black-color);
       outline: none;
       margin: 2rem 0 0 0;
       font-family: var(--font-base);
