--- a/container/Work/Work.scss
+++ b/container/Work/Work.scss
@@ -53,7 +53,7 @@
         margin: 2rem;
         padding: 1rem;
         border-radius: 0.5rem;
-        background-color: white;
+        background-color: #555555;
         color: black;
         cursor: pointer;
         transition: 0.3s ease;
@@ -143,8 +143,9 @@
         position: absolute;
         padding: 0.5rem 1rem;
         border-radius: 10px;
-        background-color: #fff;
+        background-color: 	#333333;
         top: -25px;
+        
     }
 
 }
