--- a/container/Header/Header.scss
+++ b/container/Header/Header.scss
@@ -60,6 +60,7 @@
     .badge-cmp, .tag-cmp{
         padding: 1rem 2rem;
         border:(--white-color);
+        background-color: var(--gray2-color);
         border-radius: 15px;
         flex-direction: row;
         width: auto;
