--- a/app/App.scss
+++ b/app/App.scss
@@ -122,26 +122,25 @@
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
-  
     padding: 1rem;
   
     div {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       background-color: var(--white-color);
       margin: 0.23rem 0;
       border: 1px solid var(--black-color);
-  
       display: flex;
       justify-content: center;
       align-items: center;
-  
+      margin-top: 1rem;
       transition: all 0.3s ease-in-out;
   
       svg {
-        width: 15px;
-        height: 15px;
+        margin-top: 0.25rem;
+        width: 25px;
+        height: 25px;
         color: var(--gray-color);
       }
   
