--- a/app/App.scss
+++ b/app/App.scss
@@ -119,7 +119,7 @@
   
   .app__social {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 1rem;
