--- a/container/Footer/Footer.scss
+++ b/container/Footer/Footer.scss
@@ -43,7 +43,7 @@
         font-weight: 500;
       }
       &:hover {
-        box-shadow: 0 0 25px #fef4f5;
+        box-shadow: 0 0 25px black;
       }
   
       @media screen and (max-width: 450px) {
