--- a/container/Work/Work.scss
+++ b/container/Work/Work.scss
@@ -17,7 +17,7 @@
     .app__work-filter-item{
         padding: 0.5rem 1rem; 
         border-radius: 0.5rem;
-        background-color: '#fff';
+        background-color: var(--gray2-color);
         font-weight: 800;
         color: #000;
         transition: 0.3s ease;
@@ -26,7 +26,7 @@
 
         &:hover{
             background-color: var(--secondary-color);
-            color: #fff;
+            color: #555555;
         }
         @media screen and (min-width: 2000px){
             padding: 1rem 2rem;
