--- a/app/App.scss
+++ b/app/App.scss
@@ -55,7 +55,7 @@
     font-size: 4rem;
     font-weight: 400;
     text-align: center;
-    color: var(--black-color);
+    color: var(--gray2-color);
     text-transform: capitalize;
     letter-spacing: 5px;
     span {
