--- a/app/App.scss
+++ b/app/App.scss
@@ -91,6 +91,17 @@
     }
   }
   
+  .p1-text{
+    font-size: 0.8rem;
+    text-align: left;
+    color: var(--white-color);
+    line-height: 1.5;
+  
+    @media screen and (min-width: 2000px) {
+      font-size: 1.75rem;
+    }
+  }
+
   .p-text {
     font-size: 0.8rem;
     text-align: left;
