--- a/container/Work/Work.scss
+++ b/container/Work/Work.scss
@@ -143,7 +143,7 @@
         position: absolute;
         padding: 0.5rem 1rem;
         border-radius: 10px;
-        background-color: 	#333333;
+        background-color: 	#F7AB0A;
         top: -25px;
         
     }
